--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,8 @@ footer .adress .adress-link {
   left: 5px;
   right: 6px;
   bottom: 6px;
+  height: 20px;
+  width: 20px;
 }
 
 .svg-container-item {
