--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,7 @@ body {
   box-sizing: border-box;
 }
 
-*:hover,
-*:active {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
-}
-
-div,
-button {
+* {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
 }
