--- a/css/styles.css
+++ b/css/styles.css
@@ -514,16 +514,13 @@ footer .adress .adress-link {
   border-radius: 50%;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
-  transition-property: color;
+  transition-property: background;
 }
 
 .team-socials-icon {
   height: 20px;
   width: 20px;
   fill: currentColor;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
-  transition-property: color;
 }
 
 .team-socials-icon:hover,
@@ -645,7 +642,7 @@ footer {
   border-radius: 50%;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
-  transition-property: color;
+  transition-property: background;
 }
 
 .footer-socials-item:not(:last-child) {
